<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

	<Button
	    android:id="@+id/btnCalculate"
	    android:layout_width="@dimen/full_button"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="@dimen/top_padding_big"
	    android:text="@string/calculate"
	    android:textSize="@dimen/font_large"
	    android:textStyle="bold" />
	
    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnCalculate"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginLeft="@dimen/side_padding"
        android:layout_marginTop="5dp"
        android:text="@string/bmi_description"
        android:textStyle="italic"
        tools:context=".Home"
        android:textSize="@dimen/font_normal" 
        />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="@dimen/half_button"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="@dimen/side_padding_big"
        android:layout_marginLeft="@dimen/side_padding_big"
        android:text="@string/about" 
        android:textSize="@dimen/font_normal" />

    <Button
        android:id="@+id/btnMore"
        android:layout_width="@dimen/half_button"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/btnAbout"
        android:layout_marginRight="@dimen/side_padding_big"
        android:layout_marginBottom="@dimen/side_padding_big"
        android:text="@string/more_apps" 
        android:textSize="@dimen/font_normal" />

</RelativeLayout>
